cmake_minimum_required(VERSION 3.23)
project(ds_algo)

set(CMAKE_CXX_STANDARD 14)

add_executable(ds_algo main.cpp Week1/TwoSum.cpp Week1/TwoSum.h Week1/ValidAnagram.cpp Week1/ValidAnagram.h Week1/ValidParenthesis.cpp Week1/ValidParenthesis.h Week1/IOPractice.cpp Week1/IOPractice.h Week2/TopKFrequent.cpp Week2/TopKFrequent.h Week3/MergeIntervals.hpp Week3/MergeIntervals.cpp Week3/FindTheDuplicateNumber.hpp Week3/FindTheDuplicateNumber.cpp Week3/SubarraySumEqualsK.hpp Week3/SubarraySumEqualsK.cpp Week3/ContinuousSubarraySum.hpp Week3/ContinuousSubarraySum.cpp)
